--- a/Projects/Calendar/styles.css
+++ b/Projects/Calendar/styles.css
@@ -7,6 +7,7 @@
 body{
   display: flex;
   align-items: center;
+  flex-direction: column;
   padding: 0 10px;
   justify-content: center;
   min-height: 100vh;
@@ -256,6 +257,22 @@ body{
 	width: 180px;
 }
 
+#calendar-notes {
+    padding: 20px;
+}
+
+#calendar-add-note {
+    z-index: 1;
+    width: 600px;
+    margin-top: 15px;
+    text-align: center;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+#calendar-add-note h2 {
+    margin-bottom: 10px;
+}
 
 /* KEYFRAMES */
 
